--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "format-converter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "exports": {
-    ".": "./src/index.js"
   },
   "type": "module",
   "author": "",
