--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "format-converter",
   "version": "1.0.0",
   "description": "",
-  "main": "./index.js",
+  "main": "./index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
